feat(cart): 添加购物车功能并优化流式处理
- 添加购物车控制器实现增删查清空功能
- 创建购物车相关DTO、实体类和数据访问层
- 优化多个服务类中的流式处理方法
- 修复菜品详情中口味列表的初始化问题
- 为套餐菜品服务添加事务注解增强数据一致性